--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -230,9 +230,9 @@ $list-inline-padding: 5px;
 $line-height-lg:         (4 / 3);
 $line-height-sm:         1.5;
 
-$border-radius:          .25rem;
-$border-radius-lg:       .3rem;
-$border-radius-sm:       .2rem;
+$border-radius:          0;
+$border-radius-lg:       ($border-radius*1.2);
+$border-radius-sm:       ($border-radius*0.8);
 
 $component-active-color: #fff;
 $component-active-bg:    $brand-primary;
