--- a/_sass/modules/_navbar.scss
+++ b/_sass/modules/_navbar.scss
@@ -2,7 +2,12 @@
     margin-bottom: 20px;
 }
 
-.navbar-nav .nav-link {
-    padding-top: 12px;
-    padding-bottom: 12px;
+.navbar-nav {
+    .nav-link {
+        padding-top: 12px;
+        padding-bottom: 12px;
+    }
+    .nav-item + .nav-item {
+        margin-left: 25px;
+    }
 }
