--- a/template/container/tabs.html
+++ b/template/container/tabs.html
@@ -1,14 +1,15 @@
 <div>
-	<ul class="nav nav-tabs" data-bind="foreach: tabLabels">
-		<li role="presentation" data-bind="css: { active: $index() === 0 }">
-			<a data-toggle="tab" data-bind="attr: { href: '#tab_' + containerKey }, text: displayName"></a>
+	<ul class="nav nav-tabs" data-bind="foreach: tabLabels" role="tablist">
+		<li class="nav-item">
+			<a class="nav-link" data-toggle="tab" data-bind="attr: { href: '#tab_' + containerKey }, text: displayName, css: { active: $index() === 0 }" role="tab"></a>
 		</li>
 	</ul>
 
 	<!-- Iterate children to create tab containers -->
 	<div class="tab-content" data-bind="foreach: children">
-		<div class="tab-pane" data-bind="attr: { id: 'tab_' + key }, css: { active: $index() === 0 }">
+		<div class="tab-pane" data-bind="attr: { id: 'tab_' + key }, css: { active: $index() === 0 }" role="tabpanel">
 			<!-- ko template: { name : template} --><!-- /ko -->
 		</div>
 	</div>
 </div>
+
