--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 /*!
- * Bootstrap v4.0.0-alpha.3 (http://getbootstrap.com)
+ * Bootstrap v4.0.0-alpha.4 (http://getbootstrap.com)
  * Copyright 2011-2016 The Bootstrap Authors
  * Copyright 2011-2016 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
@@ -2071,14 +2071,8 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
 
 .has-success .form-control-feedback,
 .has-success .form-control-label,
-.has-success .radio,
-.has-success .checkbox,
-.has-success .radio-inline,
-.has-success .checkbox-inline,
-.has-success.radio label,
-.has-success.checkbox label,
-.has-success.radio-inline label,
-.has-success.checkbox-inline label,
+.has-success .form-check-label,
+.has-success .form-check-inline,
 .has-success .custom-control {
   color: #5cb85c;
 }
@@ -2103,14 +2097,8 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
 
 .has-warning .form-control-feedback,
 .has-warning .form-control-label,
-.has-warning .radio,
-.has-warning .checkbox,
-.has-warning .radio-inline,
-.has-warning .checkbox-inline,
-.has-warning.radio label,
-.has-warning.checkbox label,
-.has-warning.radio-inline label,
-.has-warning.checkbox-inline label,
+.has-warning .form-check-label,
+.has-warning .form-check-inline,
 .has-warning .custom-control {
   color: #f0ad4e;
 }
@@ -2135,14 +2123,8 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
 
 .has-danger .form-control-feedback,
 .has-danger .form-control-label,
-.has-danger .radio,
-.has-danger .checkbox,
-.has-danger .radio-inline,
-.has-danger .checkbox-inline,
-.has-danger.radio label,
-.has-danger.checkbox label,
-.has-danger.radio-inline label,
-.has-danger.checkbox-inline label,
+.has-danger .form-check-label,
+.has-danger .form-check-inline,
 .has-danger .custom-control {
   color: #d9534f;
 }
@@ -4199,7 +4181,6 @@ input[type="button"].btn-block {
     column-gap: 1.25rem;
   }
   .card-columns .card {
-    display: inline-block;
     width: 100%;
   }
 }
@@ -4449,13 +4430,13 @@ a.tag:focus, a.tag:hover {
 }
 
 .alert-dismissible {
-  padding-right: 35px;
+  padding-right: 30px;
 }
 
 .alert-dismissible .close {
   position: relative;
-  top: -2px;
-  right: -21px;
+  top: -.125rem;
+  right: -15px;
   color: inherit;
 }
 
@@ -4701,14 +4682,6 @@ base::-moz-progress-bar,
   .progress-danger .progress-bar {
     background-color: #d9534f;
   }
-}
-
-.media {
-  margin-top: 15px;
-}
-
-.media:first-child {
-  margin-top: 0;
 }
 
 .media,
@@ -5621,10 +5594,6 @@ button.close {
   }
 }
 
-.bg-inverse {
-  background-color: #373a3c;
-}
-
 .bg-faded {
   background-color: #f7f7f9;
 }
@@ -5672,6 +5641,15 @@ a.bg-warning:focus, a.bg-warning:hover {
 
 a.bg-danger:focus, a.bg-danger:hover {
   background-color: #c9302c !important;
+}
+
+.bg-inverse {
+  color: #fff !important;
+  background-color: #373a3c !important;
+}
+
+a.bg-inverse:focus, a.bg-inverse:hover {
+  background-color: #1f2021 !important;
 }
 
 .clearfix::after {
@@ -6132,7 +6110,7 @@ a.bg-danger:focus, a.bg-danger:hover {
 }
 
 a.text-muted:focus, a.text-muted:hover {
-  color: #687077;
+  color: #687077 !important;
 }
 
 .text-primary {
@@ -6140,7 +6118,7 @@ a.text-muted:focus, a.text-muted:hover {
 }
 
 a.text-primary:focus, a.text-primary:hover {
-  color: #1f3667;
+  color: #1f3667 !important;
 }
 
 .text-success {
@@ -6148,7 +6126,7 @@ a.text-primary:focus, a.text-primary:hover {
 }
 
 a.text-success:focus, a.text-success:hover {
-  color: #449d44;
+  color: #449d44 !important;
 }
 
 .text-info {
@@ -6156,7 +6134,7 @@ a.text-success:focus, a.text-success:hover {
 }
 
 a.text-info:focus, a.text-info:hover {
-  color: #31b0d5;
+  color: #31b0d5 !important;
 }
 
 .text-warning {
@@ -6164,7 +6142,7 @@ a.text-info:focus, a.text-info:hover {
 }
 
 a.text-warning:focus, a.text-warning:hover {
-  color: #ec971f;
+  color: #ec971f !important;
 }
 
 .text-danger {
@@ -6172,7 +6150,7 @@ a.text-warning:focus, a.text-warning:hover {
 }
 
 a.text-danger:focus, a.text-danger:hover {
-  color: #c9302c;
+  color: #c9302c !important;
 }
 
 .text-hide {
@@ -6285,6 +6263,14 @@ a.text-danger:focus, a.text-danger:hover {
 
 .banner .logo {
   margin: 10px 0;
+}
+
+.breadcrumb-item:not(.passed) {
+  color: #818a91;
+}
+
+.breadcrumb-item:not(.passed).active {
+  color: black;
 }
 
 .navbar {
