--- a/template/field/fieldhorizontal.html
+++ b/template/field/fieldhorizontal.html
@@ -1,6 +1,6 @@
-<div class="form-group" data-bind="css: {'required':required, 'has-warning': hasWarning, 'has-error': hasError}">
+<div class="form-group row" data-bind="css: {'required':required, 'has-warning': hasWarning, 'has-error': hasError}">
 
-	<label class="control-label col-xs-12 col-sm-4">
+	<label class="control-label col-xs-12 col-sm-4 col-form-label">
 		<!-- ko text: questionText --><!-- /ko -->
 		<span data-bind="if: required()">*</span>
 	</label>
