--- a/_sass/modules/_banner.scss
+++ b/_sass/modules/_banner.scss
@@ -2,7 +2,11 @@
     .nav-loggeduser {
         margin: 10px 10px 0 0;
     }
-    .logo {
+    .btn {
+        padding: 0;
         margin: 10px 0;
+    }
+    .logo {
+        height: 50px;
     }
 }
