--- a/template/page/page.html
+++ b/template/page/page.html
@@ -1,13 +1,16 @@
 <div class="container">
-    <div class="row bq-header">
-        <div class="col-xs-9">
-            <h1 data-bind="visible: displayName, html: displayName"></h1>
+    <div class="row banner">
+        <div class="col-xs-12">
+
+            <a class="btn" href="#">
+                <div alt="Blueriq Runtime">
+                    <img class="logo img-responsive"
+                         data-bind="attr:{src: context.configuration.resourceUri+context.configuration.themePath+'img/logo.png'}"/>
+                </div>
+            </a>
         </div>
-        <div class="col-xs-3 text-right">
-            <div class="logo pull-right" alt="Blueriq Runtime">
-                <img class="img-responsive"
-                     data-bind="attr:{src: context.configuration.resourceUri+context.configuration.themePath+'img/logo.png'}"/>
-            </div>
+        <div class="col-xs-12">
+            <h1 data-bind="visible: displayName, html: displayName"></h1>
         </div>
     </div>
 
