--- a/template/container/dashboard/dashboard-header.html
+++ b/template/container/dashboard/dashboard-header.html
@@ -1,4 +1,4 @@
-<header role="banner" class="banner">
+<header role="banner" class="header">
 	  <div class="row">
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="col-xs-6">
