readonly field alignment

--- a/template/field/readonlyhorizontal.html
+++ b/template/field/readonlyhorizontal.html
@@ -1,4 +1,4 @@
-<div class="form-group readonly">
+<div class="form-group row readonly">
 	<label class="control-label col-xs-12 col-sm-4 col-form-label" data-bind="text: questionText"></label>
 	<div class="form-control-static col-xs-12 col-sm-8" data-bind="text: displayValue"></div>
 </div>
